dh-make (0.43) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Craig Small <csmall@debian.org>  Wed,  1 Nov 2006 08:32:57 +1100

dh-make (0.42) unstable; urgency=low

  * Stopped shiiping the kde examples (Closes: #372287)
  * debiank/rules is executable (Closes: #372768)
  * de-hypened man page (Closes: #372777)
  * templates changed to use compat level 5 (Closes: #370468)
  * Default priority extra in templates (Closes: #373603)
  * MAKE install var=xx => MAKE var=xx install (Closes: #374175)
  * Consitent formatting of maintainer script (Closes: #370488)
  * Kernel module name consistent (Closes: #384085)
  * bzip2 path was changed (Closes: #377523)
  * fixes for cdbs template (Closes: #382042)
  * Now supports ~ in upstream version number (Closes: #387465)
  * fixed force-reload behaviour of init.d template to follow LSB
    (Closes: #377292)
  * README.Debian the same author line as in changelog (Closes: #379773)

 -- Craig Small <csmall@debian.org>  Wed,  1 Nov 2006 08:30:21 +1100

dh-make (0.41) unstable; urgency=low

  * Kernel module rules use sname Closes: #350938, #354883
  * Typo removed from kernel rules on line 67 Closes: #348299
  * Removed conffiles.ex Closes: #345109
  * example pre/post inst/rm have space removed from first line closes: #325221
  * Checks and bombs if there are extra options Closes: #337114
  * touch in rules file uses $@ variable Closes: #344971
  * updated jrv's email address Closes: #351432
  * Manual page points to debhelper man page and not readme Closes: #353204
  * both my source and examples to debhelper v5 Closes: #340223
  * kernel-module requires build-dep on bzip2 Closes: #350935
  * multi rules file uses -s not -a Closes: #351035
  * kernel module copies compat file Closes: #351241
  * Removed year from native copyright Closes: #351278
  * Better error message when sourcefile not found Closes: #355019
  * Better emacs-setup example Closes: #355814