@@ -1,6 +1,6 @@
 Source: #PACKAGE#
 Section: unknown
-Priority: exta
+Priority: extra
 Maintainer: #USERNAME# <#EMAIL#>
 Build-Depends: #BUILD_DEPS#
 Standards-Version: #POLICY#
